0.1.2:
  - Support for cross-client MCC reports.
  - Documented library use for DoubleClick Ad Exchange Buyer API.

0.1.1:
  - Added support for BulkOpportunityService and CampaignTargetService.
  - Added examples for the above services.
  - Bugfix: pointed gem to the correct Google Code project.
  - Bugfix: correctly handle some API exceptions.
  - Bugfix: remove non-existent method in extensions.

0.1.0:
  - First release.